horizontalTimeline/src/ui/HorizontalTimelineStyle.css
.htl-wrapper {
    overflow-x: auto;
    border: 2px solid #00ff40;
    background: rgb(196, 198, 199);
    font-family: Arial;
    /*max-height: 100vh;*/
}
/* Header Style */

.htl-header {
    display: flex;
   /*margin-left: 140px;*/
    height: 50px !important;
    position: sticky;
    top: 0;
    background: white;
    z-index: 5;
}

.htl-header-ticks{
    position: absolute;
    top: 0;
    background-color: #50a2ee;
    border-radius: 10%;
    height: 100%;
    width:100%;
    color: white;
    display: flex;
    flex-direction: row;
}

.htl-hour-tick{
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    font-size: large;
    font-weight: bold;
    border:2px solid #110e5ac5;
    background-color: #2f93f1;
    width: 120px;
    padding: 10px 10px 10px 10px ;
}


/*-------*/
.htl-cell {
    border: 2px solid #ff02f2;
    min-width: 120px;
    border-left: 1px solid #eee;
    text-align: center;
    padding: 10px;
    font-weight: 600;
}

.htl-body {
    display: flex;
    flex-direction: column;
    max-width: 1600px;
}

.htl-row {
    position: relative;
    height: 70px;
    border-top: 1px solid #f1f1f1;
}

.htl-grid-line{
    position: absolute;
    height: 100%;
    width: 2px;
    overflow: hidden;
    background: rgb(61, 61, 61);
}

.htl-now-line{
    position: absolute;
    height: 100%;
    width: 2px;
    overflow: hidden;
    background: red;
}



.employee-name {
    position: absolute;
    width: 140px;
    left: 0;
    top: 0;
    bottom: 0;
    display: flex;
    align-items: center;
    padding-left: 10px;
    font-weight: bold;
    background: #fafafa;
    border-right: 1px solid #ddd;
}

.htl-events-layer {
    position: absolute;
    left: 140px;
    top: 0;
    height: 100%;
}
/* Tooltip Styles */
.htl-tooltip {
    position: relative;
    display: inline-block;
    background: #333;
    color: white;
    padding: 5px 10px;
    border-radius: 4px;
    font-size: 12px;
    pointer-events: none;
    opacity: 0;
    transition: opacity 0.2s ease-in-out;
}


/*----------------*/


.htl-event {
    position: absolute;
    top: 12px;
    height: 45px;
    background: #110e5a;
    color: white;
    border-radius: 8px;
    padding: 10px;
    font-size: 13px;
    overflow: hidden;
    white-space: nowrap;
}

